      - AngularJS promises for AngularJS plugin
      - jQuery promises for jQuery plugin
    * FIX: do not retry when server sends 4xx or 1xx
    * FIX: distinguish jQuery/AngularJS request timeouts from errors and thus retry when timeout
    * FIX: JSONP fallback when jQuery/AngularJS request error
    * BREAKING CHANGE: .getLogs(cb[, offset, length]) is now .getLogs([offset, length, cb]) #43


2015-02-03  2.9.2
    * Fixed calls to `.search(function() {})`, `.search(null, function() {})`, `.search(undefined, function() {})
    * Fixed shared cache amongst instances

2015-02-03  2.9.1
    * Fixed listIndexes pagination, not working if page=0

2015-01-13  2.9.0
    * Angular.js & jQuery compatibility (returning promises)
    * Helper: ability to exclude facets

2015-01-13  2.8.6
    * Search helper: ability to set default facet filters

2015-01-07  2.8.5
    * Avoid CORS preflight request

2014-12-31  2.8.4
    * Fixed a bug in JSONP fallback on multi-queries and getObject when a secured API Key was used (X-Algolia-TagFilters parameter was not set, resulting in a 403 permission denied error)

2014-12-30  2.8.3
    * Helper optimization: number of nested queries is now driven by the number of refined disjunctive facets only

2014-12-23  2.8.2
    * Increase the request timeout after each retry

2014-12-09  2.8.1
    * Enabled DSN by default (is working even if only one datacenter is selected)

2014-11-28  2.8.0
    * Move to algolia.net by default

2014-11-25  2.7.5
    * Expose one option to select the TTL (prepare migration to .net, allow to gain some milliseconds compared to .io)

2014-11-12  2.7.4
    * Expose more options (jsonp & requestTimeoutInMs)
    * Change the way the JSONP fallback works

2014-10-29  2.7.3
  * Reintroduced Algolia Custom Headers (X-Algolia-*) on queries. It was removed to try to remove the CORS OPTIONS query but this has no impact because this is a POST action.

2014-10-27  2.7.2
  * Fixed browse method (author @muertet)
